tests/spec/emit/snapshots/match_statement_option_unit_arms.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn noop() {}
  
  fn maybe(b: bool) -> Option<int> {
    if b { Some(42) } else { None }
  }
  
  fn test() {
    match maybe(true) {
      Some(_) => noop(),
      None => noop(),
    }
  }
---
package main

func noop() {}

func maybe(b bool) (int, bool) {
	if b {
		return 42, true
	}
	return 0, false
}

func test() {
	if _, ok := maybe(true); ok {
		noop()
	} else {
		noop()
	}
}
