tests/spec/emit/snapshots/match_struct_literal_subject_parenthesized.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  import "go:fmt"
  
  struct Point { x: int }
  
  fn main() {
    let result = match Point { x: 1 }.x {
      1 => 10,
      _ => 0,
    }
    fmt.Println(result)
  }
---
package main

import "fmt"

type Point struct {
	x int
}

func main() {
	var result int
	if (Point{x: 1}).x == 1 {
		result = 10
	} else {
		result = 0
	}
	fmt.Println(result)
}
