tests/spec/emit/snapshots/match_struct_pattern.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nstruct Point { x: int, y: int }\n\nfn test(p: Point) -> int {\n  match p {\n    Point { x: 0, y: 0 } => 0,\n    Point { x, y } => x + y,\n  }\n}\n"
---
package main

type Point struct {
	x int
	y int
}

func test(p Point) int {
	if p.x == 0 && p.y == 0 {
		return 0
	}
	return p.x + p.y
}
