tests/spec/emit/snapshots/match_struct_pattern_with_binding.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nstruct Point { x: int, y: int }\n\nfn test(p: Point) -> int {\n  match p {\n    Point { x: a, y: b } => a * b,\n  }\n}\n"
---
package main

type Point struct {
	x int
	y int
}

func test(p Point) int {
	return p.x * p.y
}
