tests/spec/emit/snapshots/match_subject_var_discard_ignores_string_literal_lookalike.snap
---
source: tests/spec/emit/patterns.rs
description: "input: \nstruct Point { x: int }\n\nfn make() -> Point {\n  Point { x: 1 }\n}\n\nfn test() -> string {\n  match make() {\n    _ => \"subject_1\",\n  }\n}\n"
---
package main

type Point struct {
	x int
}

func make_() Point {
	return Point{x: 1}
}

func test() string {
	_ = make_()
	return "subject_1"
}
