tests/spec/emit/snapshots/match_tuple_nested.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let nested = ((1, 2), 3);
    match nested {
      ((1, 2), 3) => 6,
      ((x, y), z) => x + y + z,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() int {
	nested := lisette.MakeTuple2[lisette.Tuple2[int, int], int](lisette.MakeTuple2[int, int](1, 2), 3)
	if nested.First.First == 1 && nested.First.Second == 2 && nested.Second == 3 {
		return 6
	}
	return nested.First.First + nested.First.Second + nested.Second
}
